feat: search all opportinities